<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameTextView"
        style="@style/textViewHintLaboratoryResearch"
        android:layout_width="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:minHeight="0dp"
        android:text="@string/recommendation"
        android:textAlignment="center"
        android:textColor="@color/active_color"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbarThumbVertical="@color/enter_color"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/whyTextView"
                style="@style/textViewHintLaboratoryResearch"
                android:layout_width="0dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/why_text"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/whatToDoTextView"
                style="@style/textViewHintLaboratoryResearch"
                android:layout_width="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                android:minHeight="0dp"
                android:text="@string/what_todo"
                android:textAlignment="center"
                android:textColor="@color/enter_color"
                android:textSize="@dimen/text_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whyTextView" />

            <TextView
                android:id="@+id/recommendationTextView"
                style="@style/textViewHintLaboratoryResearch"
                android:layout_width="0dp"
                android:layout_marginHorizontal="20dp"
                android:minHeight="0dp"
                android:text="@string/recommendation_todo"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whatToDoTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>