<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.recommendations.presentation.RecommendationsFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/titleVerticalMargin"
        android:background="@drawable/title_background"
        android:elevation="@dimen/titleElevation"
        android:paddingHorizontal="@dimen/titleHorizontalPadding"
        android:paddingVertical="@dimen/titleVerticalPadding"
        android:text="@string/title_recommendation"
        android:textSize="@dimen/text_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/sendFeedbackButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/titleHorizontalMargin"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_feedback_star"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:tint="@color/yellow_color" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="14dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="14dp"
        app:ci_drawable="@drawable/ic_drawable_indicator"
        app:ci_drawable_unselected="@drawable/ic_drawable_indicator"
        app:ci_height="5dp"
        app:ci_width="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/welcomeWindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/welcome_text"
            android:textColor="@color/active_color"
            android:textSize="@dimen/text_medium_20sp" />

        <TextView
            android:id="@+id/tooltip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/welcome_tooltip"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/startSurvey"
            style="@style/button_positive"
            android:layout_width="wrap_content"
            android:text="@string/button_text_start" />

    </LinearLayout>

    <com.example.presentation.ResultView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>